codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__approvals_selection_popup.snap
---
source: tui/src/chatwidget/tests/permissions.rs
expression: popup
---
  Update Model Permissions


› 1. Ask for approval  Read and edit workspace files and run commands, with
                       approval required for internet access or edits outside
                       the workspace
  2. Full Access       Use with caution: Ore can edit files outside this
                       workspace and access the internet without approval

  enter select · esc back
